Fixing line height if drop into prompt wraps

--- a/src/vs/workbench/browser/parts/editor/media/editordroptarget.css
+++ b/src/vs/workbench/browser/parts/editor/media/editordroptarget.css
@@ -29,6 +29,8 @@
 #monaco-workbench-editor-drop-overlay .editor-group-overlay-drop-into-prompt {
 	text-align: center;
 	padding: 0.6em;
+	margin: 0.2em;
+	line-height: normal;
 	opacity: 0; /* hidden initially */
 	transition: opacity 150ms ease-out;
 }
